--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-  </head>
-  <body>
-  </body>
+<head>
+	<title>Zoë Petroff</title>
+</head>
+<body style="margin: 0; background-color: #000;">
+</body>
 </html>
